[gd_scene load_steps=5 format=3 uid="uid://dnld12qmgae5h"]

[ext_resource type="Script" uid="uid://hshtak0l6uk" path="res://UI/main_menu.gd" id="1_8saeu"]
[ext_resource type="Theme" uid="uid://dj76g6s63uffv" path="res://Theme/ShipTheme.tres" id="1_ghw46"]
[ext_resource type="Script" uid="uid://hbp220v5ajsq" path="res://Comms/InitiateConnection.gd" id="1_tt5f1"]
[ext_resource type="Texture2D" uid="uid://bkm6mum4eprwu" path="res://Theme/Gradient.tres" id="2_853f1"]

[node name="Node3D" type="Control"]
custom_minimum_size = Vector2(960, 540)
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_ghw46")
script = ExtResource("1_8saeu")

[node name="MessageSender" type="Node" parent="."]
script = ExtResource("1_tt5f1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("2_853f1")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 962.0
offset_bottom = 579.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Hi, welcome to Signal and Noise! 
This is a two player cooperative game, so you will need someone to play with, ideally not in the same room as you."

[node name="new game button" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 213.0
offset_right = 466.0
offset_bottom = 277.0
mouse_default_cursor_shape = 2

[node name="join game button" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 378.0
offset_right = 463.0
offset_bottom = 442.0
mouse_default_cursor_shape = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 220.0
offset_right = 392.0
offset_bottom = 287.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Create New Game"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 384.0
offset_right = 490.0
offset_bottom = 451.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Join Game"

[node name="GiveCode" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 175.0
offset_right = 921.0
offset_bottom = 440.0
focus_mode = 2
mouse_force_pass_scroll_events = false
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
scroll_active = false
selection_enabled = true

[node name="JoinGameFeedback" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 450.0
offset_right = 949.0
offset_bottom = 545.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true

[node name="CodeEntry" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 288.0
offset_right = 461.0
offset_bottom = 369.0
theme_override_font_sizes/font_size = 36
placeholder_text = "Enter Game Code"

[connection signal="pressed" from="new game button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="join game button" to="." method="_on_join_game_button_pressed"]
[connection signal="text_submitted" from="CodeEntry" to="." method="_on_join_game_button_pressed"]
